<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical"
    tools:context="rixin.app.officeauto.activity.BackstageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_backstage_management_title_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/btn_ac_back_back"
            android:layout_width="@dimen/ac_edit_information_btn_back_size"
            android:layout_height="@dimen/ac_edit_information_btn_back_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/firstenter_3_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/backstage"
            android:textSize="@dimen/ac_edit_information_title_font_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_edit_information_space_height"
        android:orientation="vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_backstage_management_name_height"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/iv_ac_backstage_icon"
            android:layout_width="@dimen/ac_backstage_management_icon_size"
            android:layout_height="@dimen/ac_backstage_management_icon_size"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_ac_backtage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_ac_backstage_icon"
            android:layout_toRightOf="@+id/iv_ac_backstage_icon"
            android:paddingLeft="@dimen/ac_backstage_padding_right"
            android:paddingTop="@dimen/ac_backstage_padding_top"
            android:text="日新网" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_ac_backtage"
            android:layout_toRightOf="@+id/tv_ac_backtage"
            android:paddingLeft="@dimen/ac_backstage_padding_right"
            android:paddingTop="@dimen/ac_backstage_padding_top"
            android:src="@drawable/leftbar_profile_erweima" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_ac_backstage_icon"
            android:layout_toRightOf="@+id/iv_ac_backstage_icon"
            android:paddingBottom="@dimen/ac_backstage_padding_top"
            android:paddingLeft="@dimen/ac_backstage_padding_right"
            android:src="@drawable/leftbar_houtaiguanli_edit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/leftbar_houtaiguanli_qiehuan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/change" />
        </LinearLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_edit_information_space_height"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_backstage_management_information_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:text="@string/competence"
            android:textSize="@dimen/ac_edit_information_font_size" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/ac_backstage_management_padding_iv"
            android:src="@drawable/contact_book_wodebumen_enter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_edit_information_information_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:text="@string/distribution"
            android:textSize="@dimen/ac_edit_information_font_size" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/ac_backstage_management_padding_iv"
            android:src="@drawable/contact_book_wodebumen_enter" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_edit_information_btn_back_size"
        android:background="@drawable/bg_btn"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        />

</LinearLayout>
